[build-system]
requires = ["setuptools~=62.3", "wheel~=0.37.1"]
build-backend = "setuptools.build_meta"

[project]
name         = "home-assistant-frontend"
version      = "20220907.2"
license      = {text = "Apache-2.0"}
description  = "The Home Assistant frontend"
readme       = "README.md"
authors      = [
    {name = "The Home Assistant Authors", email = "hello@home-assistant.io"}
]
requires-python = ">=3.4.0"

[project.urls]
"Homepage" = "https://github.com/home-assistant/frontend"

[tool.setuptools]
platforms = ["any"]
zip-safe  = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["hass_frontend*"]
