[metadata]
name         = home-assistant-frontend
version      = 20220127.0
author       = The Home Assistant Authors
author_email = hello@home-assistant.io
license      = Apache-2.0
description  = The Home Assistant frontend
url          = https://github.com/home-assistant/frontend

[options]
packages = find:
zip_safe = False
include_package_data = True

[options.packages.find]
include =
    hass_frontend*
