[metadata]
name         = home-assistant-frontend
version      = 20220214.0
author       = The Home Assistant Authors
author_email = hello@home-assistant.io
license      = Apache-2.0
platforms    = any
description  = The Home Assistant frontend
long_description = file: README.md
long_description_content_type = text/markdown
url          = https://github.com/home-assistant/frontend

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >= 3.4.0

[options.packages.find]
include =
    hass_frontend*
